--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 *{
     box-sizing: border-box;
+    font-size: 1.2rem;
+    border:none;
 }
 body{
     background-color:aliceblue;
@@ -19,29 +21,21 @@ body{
     border-radius: 5px;
     margin: 5px;
 }
-.calculator-container input{
+.calculator-container #result{
     width: 240px;
     text-align: right;
-    box-shadow: inset;
     box-shadow: -1px -2px 3px 2px #ffffff inset, 1px 2px 3px 2px #000000 inset;
 }
-.calculator-container input:active{
-    border:none;
-    outline:none;
-}
-.calculator-container>button{
+.calculator-container>input[type="button"]{
     width: 50px;
     box-shadow: -1px -2px 3px 2px #ffffff, 1px 2px 3px 2px #000000;
 }
 
-.calculator-container>button:hover{
+.calculator-container>input[type="button"]:hover{
     box-shadow: -1px -2px 3px 2px #ffffff inset, 1px 2px 3px 2px #000000 inset;
 }
-.calculator-container>button:active{
+.calculator-container>input[type="button"]:active{
     background-color: rgb(203, 235, 236);
 }
-.calculator-container input, .calculator-container>button{
-    height: 40px;
-    font-size: 1.5rem;
-    border:none;
-}
+.calculator-container input{
+    height: 40px;}
